--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
 
 :root {
   --foreground-rgb: 0, 0, 0;
@@ -17,6 +14,7 @@
 }
 
 body {
+  background-color: grey;
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
